--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.18",
     "@types/node-fetch": "^2.6.1",
     "jest": "^27.5.1",
+    "jest-extended": "^2.0.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "tslib": "^2.3.1",
