--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0"
   }
